--- a/templates/Dockerfile.arm64v8
+++ b/templates/Dockerfile.arm64v8
@@ -1,63 +1,110 @@
-FROM debian:stretch-slim as tini
-ENV TINI_VERSION v0.18.0
+FROM ubuntu:jammy as tini
+ENV TINI_VERSION v0.19.0
 ENV TINI_ARCH -arm64
 
-RUN apt-get update && apt-get install -y --no-install-recommends \
-      wget \
-      ca-certificates \
-      gnupg \
-      dirmngr \
-      apt-transport-https \
-    && rm -rf /var/lib/apt/lists/*
+SHELL ["/bin/bash", "-o", "pipefail", "-c"]
+ENV DEBIAN_FRONTEND=noninteractive
 
-RUN mkdir -p /tmp/build && \
-	cd /tmp/build && \
-	wget -O tini https://github.com/krallin/tini/releases/download/${TINI_VERSION}/tini-static${TINI_ARCH} && \
-	wget -O tini.asc https://github.com/krallin/tini/releases/download/${TINI_VERSION}/tini-static${TINI_ARCH}.asc && \
-  gpg --batch --keyserver keyserver.ubuntu.com --recv-keys 595E85A6B1B4779EA4DAAEC70B588DFF0527A9B7 && \
-  gpg --batch --verify tini.asc tini && \
-	cp tini /sbin/ && \
-	chmod +x /sbin/tini && \
-	cd /tmp && \
-	rm -rf /tmp/build && \
-	rm -rf /root/.gnupg
+RUN set -eux; \
+      \
+      apt-get update -y; \
+      apt-get install -y --no-install-recommends \
+        wget \
+        ca-certificates \
+        gnupg \
+        dirmngr \
+        apt-transport-https \
+      ; \
+      apt-get clean; \
+      rm -f /var/lib/apt/lists/*_*
+
+RUN set -eux; \
+      \
+      mkdir -p /tmp/build; \
+	    cd /tmp/build; \
+      \
+      wget -O tini https://github.com/krallin/tini/releases/download/${TINI_VERSION}/tini-static${TINI_ARCH}; \
+      wget -O tini.asc https://github.com/krallin/tini/releases/download/${TINI_VERSION}/tini-static${TINI_ARCH}.asc; \
+      gpg --batch --keyserver  keyserver.ubuntu.com --recv-keys 595E85A6B1B4779EA4DAAEC70B588DFF0527A9B7; \
+      gpg --batch --verify tini.asc tini; \
+      cp tini /sbin/; \
+      chmod +x /sbin/tini; \
+      \
+      cd /tmp; \
+      rm -rf /tmp/build; \
+      rm -rf /root/.gnupg
 
 FROM multiarch/qemu-user-static:aarch64 as qemu
 
-FROM arm64v8/openjdk:8-slim-stretch
+FROM arm64v8/ubuntu:jammy
 LABEL maintainer="Ryan Schlesinger <ryan@ryanschlesinger.com>"
+
+SHELL ["/bin/bash", "-o", "pipefail", "-c"]
+ENV DEBIAN_FRONTEND=noninteractive
 
 COPY --from=qemu /usr/bin/qemu-aarch64-static /usr/bin/qemu-aarch64-static
 COPY --from=tini /sbin/tini /sbin/tini
 
-RUN apt-get update && apt-get install -y --no-install-recommends \
-      wget \
-      ca-certificates \
-      gnupg \
-      dirmngr \
-    && rm -rf /var/lib/apt/lists/*
+RUN set -eux; \
+      \
+      apt-get update -y; \
+      apt-get install -y --no-install-recommends \
+        wget \
+        curl \
+        ca-certificates \
+        gnupg \
+        dirmngr \
+        apt-transport-https \
+        openjdk-8-jre-headless \
+      ; \
+      apt-get clean; \
+      rm -f /var/lib/apt/lists/*_*
+
+# Adapted from: https://get.glennr.nl/unifi/install/unifi-7.1.67.sh
+RUN set -eux; \
+      \
+      libssl_temp="$(mktemp --tmpdir=/tmp libssl1.0.2_XXXXX.deb)"; \
+      wget -O "$libssl_temp" 'https://launchpad.net/ubuntu/+source/openssl1.0/1.0.2n-1ubuntu5/+build/14503127/+files/libssl1.0.0_1.0.2n-1ubuntu5_arm64.deb'; \
+      dpkg -i "$libssl_temp"; \
+      rm --force "$libssl_temp" 2> /dev/null; \
+      \
+      wget -qO - https://www.mongodb.org/static/pgp/server-3.6.asc | gpg --dearmor | tee -a /usr/share/keyrings/mongodb-server-3.6.gpg &> /dev/null; \
+      echo "deb [ arch=amd64,arm64 signed-by=/usr/share/keyrings/mongodb-server-3.6.gpg ] https://repo.mongodb.org/apt/ubuntu xenial/mongodb-org/3.6 multiverse" &> "/etc/apt/sources.list.d/mongodb-org-3.6.list"; \
+      apt-get update -y; \
+      apt-get -y -o Dpkg::Options::='--force-confdef' -o Dpkg::Options::='--force-confold' install \
+        mongodb-org \
+      ; \
+      apt-get clean; \
+      rm -f /var/lib/apt/lists/*_*
 
 # Install any version from deb download
-# Use dpkg to mark the package for install (expect it to fail to complete the installation)
-# Use apt-get install -f to complete the installation with dependencies
 ENV UNIFI_VERSION {{ unifi_version }}
 ENV UNIFI_DOCKER_VERSION {{ docker_version }}
-RUN mkdir -p /usr/share/man/man1 && \
-      mkdir -p /tmp/build && \
-      cd /tmp/build && \
-      wget -O /etc/apt/trusted.gpg.d/unifi-repo.gpg https://dl.ui.com/unifi/unifi-repo.gpg && \
-      wget https://www.ubnt.com/downloads/unifi/${UNIFI_VERSION}/unifi_sysvinit_all.deb && \
-      apt-get update && apt-get install -y --no-install-recommends \
+RUN set -eux; \
+      \
+      mkdir -p /usr/share/man/man1; \
+      mkdir -p /tmp/build; \
+      cd /tmp/build; \
+      \
+      wget -O /etc/apt/trusted.gpg.d/unifi-repo.gpg https://dl.ui.com/unifi/unifi-repo.gpg; \
+      wget https://www.ubnt.com/downloads/unifi/${UNIFI_VERSION}/unifi_sysvinit_all.deb; \
+      apt-get update -y; \
+      apt-get install -y --no-install-recommends \
         ./unifi_sysvinit_all.deb \
-        procps && \
-      rm -rf /var/lib/apt/lists/* && \
+        procps \
+      ; \
+      apt-get clean; \
+      rm -f /var/lib/apt/lists/*_*; \
       rm -rf /tmp/build
 
-RUN ln -s /var/lib/unifi /usr/lib/unifi/data
+RUN set -eux; \
+      \
+      ln -s /var/lib/unifi /usr/lib/unifi/data
+
 EXPOSE 8080/tcp 8443/tcp 8843/tcp 8880/tcp 3478/udp
 
 WORKDIR /var/lib/unifi
-ENV JAVA_OPTS -Xmx512M
+ENV JAVA_OPTS -Xmx1024M
 
 COPY entrypoint.sh /docker-entrypoint.sh
 ENTRYPOINT ["/sbin/tini", "-g", "--", "/docker-entrypoint.sh"]
