--- a/templates/Dockerfile.amd64
+++ b/templates/Dockerfile.amd64
@@ -78,6 +78,7 @@ RUN set -eux; \
 # Install any version from deb download
 ENV UNIFI_VERSION {{ unifi_version }}
 ENV UNIFI_DOCKER_VERSION {{ docker_version }}
+ENV UNIFI_SHA256 {{ unifi_sha256 }}
 
 RUN set -eux; \
       \
@@ -86,7 +87,8 @@ RUN set -eux; \
       cd /tmp/build; \
       \
       wget -O /etc/apt/trusted.gpg.d/unifi-repo.gpg https://dl.ui.com/unifi/unifi-repo.gpg; \
-      wget https://www.ubnt.com/downloads/unifi/${UNIFI_VERSION}/unifi_sysvinit_all.deb; \
+      wget -O unifi_sysvinit_all.deb https://fw-download.ubnt.com/data/unifi-controller/1aca-debian-${UNIFI_VERSION}.deb; \
+      echo "${UNIFI_SHA256}  unifi_sysvinit_all.deb" | sha256sum --check; \
       apt-get update -y; \
       apt-get install -y --no-install-recommends \
         ./unifi_sysvinit_all.deb \
