--- a/7.2/Dockerfile.amd64
+++ b/7.2/Dockerfile.amd64
@@ -76,8 +76,9 @@ RUN set -eux; \
       rm -f /var/lib/apt/lists/*_*
 
 # Install any version from deb download
-ENV UNIFI_VERSION 7.2.87-fffa72f058
-ENV UNIFI_DOCKER_VERSION 7.2.87
+ENV UNIFI_VERSION 7.2.88-a370268978c44bd79f1af4fba6fc4d2a
+ENV UNIFI_DOCKER_VERSION 7.2.88
+ENV UNIFI_SHA256 d2e2985abda458835d88dac89fb7f8ed4132eabf6653ff3562b42c1223a0b8f2
 
 RUN set -eux; \
       \
@@ -86,7 +87,8 @@ RUN set -eux; \
       cd /tmp/build; \
       \
       wget -O /etc/apt/trusted.gpg.d/unifi-repo.gpg https://dl.ui.com/unifi/unifi-repo.gpg; \
-      wget https://www.ubnt.com/downloads/unifi/${UNIFI_VERSION}/unifi_sysvinit_all.deb; \
+      wget -O unifi_sysvinit_all.deb https://fw-download.ubnt.com/data/unifi-controller/1aca-debian-${UNIFI_VERSION}.deb; \
+      echo "${UNIFI_SHA256}  unifi_sysvinit_all.deb" | sha256sum --check; \
       apt-get update -y; \
       apt-get install -y --no-install-recommends \
         ./unifi_sysvinit_all.deb \
