--- a/7.1/Dockerfile.amd64
+++ b/7.1/Dockerfile.amd64
@@ -76,8 +76,9 @@ RUN set -eux; \
       rm -f /var/lib/apt/lists/*_*
 
 # Install any version from deb download
-ENV UNIFI_VERSION 7.1.67-c58de44a45
-ENV UNIFI_DOCKER_VERSION 7.1.67
+ENV UNIFI_VERSION 7.1.68-124045abd4
+ENV UNIFI_DOCKER_VERSION 7.1.68
+ENV UNIFI_SHA256 375dbfbf5b943c1a54fe55cebe3ec08d22a8fc28d64e31abf52308884fe5745f
 
 RUN set -eux; \
       \
@@ -86,7 +87,8 @@ RUN set -eux; \
       cd /tmp/build; \
       \
       wget -O /etc/apt/trusted.gpg.d/unifi-repo.gpg https://dl.ui.com/unifi/unifi-repo.gpg; \
-      wget https://www.ubnt.com/downloads/unifi/${UNIFI_VERSION}/unifi_sysvinit_all.deb; \
+      wget -O unifi_sysvinit_all.deb https://dl.ui.com/unifi/${UNIFI_VERSION}/unifi_sysvinit_all.deb; \
+      echo "${UNIFI_SHA256}  unifi_sysvinit_all.deb" | sha256sum --check; \
       apt-get update -y; \
       apt-get install -y --no-install-recommends \
         ./unifi_sysvinit_all.deb \
