--- a/7.2/Dockerfile.amd64
+++ b/7.2/Dockerfile.amd64
@@ -76,9 +76,9 @@ RUN set -eux; \
       rm -f /var/lib/apt/lists/*_*
 
 # Install any version from deb download
-ENV UNIFI_VERSION 7.2.92
-ENV UNIFI_DOCKER_VERSION 7.2.92
-ENV UNIFI_SHA256 4c1f5f2406271f4f5848d00475b307b152638a5fa8bc1bbc17fa15b71aa1bc83
+ENV UNIFI_VERSION 7.2.93-0d2bdb3a0e
+ENV UNIFI_DOCKER_VERSION 7.2.93
+ENV UNIFI_SHA256 6d8cf9caeb455356ea02c638323c46d8f1c0255d95c0985a1633fd67a4001722
 
 RUN set -eux; \
       \
