--- a/8.1/Dockerfile.arm64v8
+++ b/8.1/Dockerfile.arm64v8
@@ -76,6 +76,10 @@ RUN set -eux; \
       apt-get update; \
       apt-get -y --no-install-recommends -o Dpkg::Options::='--force-confdef' -o Dpkg::Options::='--force-confold' install \
         mongodb-org=4.4.18 \
+        mongodb-org-server=4.4.18 \
+        mongodb-org-mongos=4.4.18 \
+        mongodb-org-tools=4.4.18 \
+        mongodb-org-shell=4.4.18 \
       ; \
       apt-get clean; \
       rm -rf /var/lib/apt/lists/*
