--- a/8.3/Dockerfile.arm64v8
+++ b/8.3/Dockerfile.arm64v8
@@ -1,5 +1,7 @@
 # syntax=docker/dockerfile:1
-FROM arm64v8/ubuntu:lunar as tini
+# hadolint global ignore=DL3008
+# hadolint global ignore=DL3003
+FROM arm64v8/ubuntu:noble as tini
 ENV TINI_VERSION v0.19.0
 ENV TINI_ARCH -arm64
 
@@ -17,15 +19,15 @@ RUN set -eux; \
         apt-transport-https \
       ; \
       apt-get clean; \
-      rm -f /var/lib/apt/lists/*_*
+      rm -rf /var/lib/apt/lists/*
 
 RUN set -eux; \
       \
       mkdir -p /tmp/build; \
 	    cd /tmp/build; \
       \
-      wget -O tini https://github.com/krallin/tini/releases/download/${TINI_VERSION}/tini-static${TINI_ARCH}; \
-      wget -O tini.asc https://github.com/krallin/tini/releases/download/${TINI_VERSION}/tini-static${TINI_ARCH}.asc; \
+      wget --progress=dot:giga -O tini https://github.com/krallin/tini/releases/download/${TINI_VERSION}/tini-static${TINI_ARCH}; \
+      wget --progress=dot:giga -O tini.asc https://github.com/krallin/tini/releases/download/${TINI_VERSION}/tini-static${TINI_ARCH}.asc; \
       gpg --batch --keyserver  keyserver.ubuntu.com --recv-keys 595E85A6B1B4779EA4DAAEC70B588DFF0527A9B7; \
       gpg --batch --verify tini.asc tini; \
       cp tini /sbin/; \
@@ -35,7 +37,7 @@ RUN set -eux; \
       rm -rf /tmp/build; \
       rm -rf /root/.gnupg
 
-FROM arm64v8/ubuntu:lunar
+FROM arm64v8/ubuntu:noble
 LABEL maintainer="Ryan Schlesinger <ryan@ryanschlesinger.com>"
 
 SHELL ["/bin/bash", "-o", "pipefail", "-c"]
@@ -43,6 +45,7 @@ ENV DEBIAN_FRONTEND=noninteractive
 
 COPY --from=tini /sbin/tini /sbin/tini
 
+# hadolint ignore=SC1083
 RUN set -eux; \
       \
       apt-get update -y; \
@@ -53,32 +56,38 @@ RUN set -eux; \
         gnupg \
         dirmngr \
         apt-transport-https \
-        openjdk-17-jre-headless \
+        openjdk-11-jre-headless \
       ; \
       apt-get clean; \
-      rm -f /var/lib/apt/lists/*_*
+      rm -rf /var/lib/apt/lists/*
 
-# Adapted from: https://get.glennr.nl/unifi/install/unifi-7.1.67.sh
+# Adapted from: https://get.glennr.nl/unifi/install/unifi-8.1.127.sh
 RUN set -eux; \
       \
-      libssl_temp="$(mktemp --tmpdir=/tmp libssl1.0.2_XXXXX.deb)"; \
-      wget -O "$libssl_temp" 'https://launchpad.net/ubuntu/+source/openssl1.0/1.0.2n-1ubuntu5/+build/14503127/+files/libssl1.0.0_1.0.2n-1ubuntu5_arm64.deb'; \
+      libssl_temp="$(mktemp --tmpdir=/tmp libssl1.1.1_XXXXX.deb)"; \
+      wget -qO "$libssl_temp" 'http://ports.ubuntu.com/pool/main/o/openssl/libssl1.1_1.1.1f-1ubuntu2_arm64.deb'; \
       dpkg -i "$libssl_temp"; \
       rm --force "$libssl_temp" 2> /dev/null; \
       \
-      wget -qO - https://www.mongodb.org/static/pgp/server-3.6.asc | gpg --dearmor | tee -a /usr/share/keyrings/mongodb-server-3.6.gpg &> /dev/null; \
-      echo "deb [ arch=amd64,arm64 signed-by=/usr/share/keyrings/mongodb-server-3.6.gpg ] https://repo.mongodb.org/apt/ubuntu xenial/mongodb-org/3.6 multiverse" &> "/etc/apt/sources.list.d/mongodb-org-3.6.list"; \
-      apt-get update -y; \
-      apt-get -y -o Dpkg::Options::='--force-confdef' -o Dpkg::Options::='--force-confold' install \
-        mongodb-org \
+      curl -fsSL https://www.mongodb.org/static/pgp/server-4.4.asc | \
+      gpg -o /usr/share/keyrings/mongodb-server-4.4.gpg \
+      --dearmor ; \
+      echo "deb [ arch=amd64,arm64 signed-by=/usr/share/keyrings/mongodb-server-4.4.gpg ] https://repo.mongodb.org/apt/ubuntu focal/mongodb-org/4.4 multiverse" | tee /etc/apt/sources.list.d/mongodb-org-4.4.list; \
+      apt-get update; \
+      apt-get -y --no-install-recommends -o Dpkg::Options::='--force-confdef' -o Dpkg::Options::='--force-confold' install \
+        mongodb-org=4.4.18 \
+        mongodb-org-server=4.4.18 \
+        mongodb-org-mongos=4.4.18 \
+        mongodb-org-tools=4.4.18 \
+        mongodb-org-shell=4.4.18 \
       ; \
       apt-get clean; \
-      rm -f /var/lib/apt/lists/*_*
+      rm -rf /var/lib/apt/lists/*
 
 # Install any version from deb download
-ENV UNIFI_VERSION 7.5.187-f57f5bf7ab
-ENV UNIFI_DOCKER_VERSION 7.5.187
-ENV UNIFI_SHA256 6b9925f2065b467852fe9d6298f97bb28334fd04851dd334fb66cd9837dcd666
+ENV UNIFI_VERSION 8.3.20-7102566c7b
+ENV UNIFI_DOCKER_VERSION 8.3.20
+ENV UNIFI_SHA256 b12424a05d7b8232b84f20a005f2b75828284b633da5993155cb09b0e5b7c81a
 
 RUN set -eux; \
       \
@@ -86,8 +95,8 @@ RUN set -eux; \
       mkdir -p /tmp/build; \
       cd /tmp/build; \
       \
-      wget -O /etc/apt/trusted.gpg.d/unifi-repo.gpg https://dl.ui.com/unifi/unifi-repo.gpg; \
-      wget -O unifi_sysvinit_all.deb https://dl.ui.com/unifi/${UNIFI_VERSION}/unifi_sysvinit_all.deb; \
+      wget -qO /etc/apt/trusted.gpg.d/unifi-repo.gpg https://dl.ui.com/unifi/unifi-repo.gpg; \
+      wget -qO unifi_sysvinit_all.deb https://dl.ui.com/unifi/${UNIFI_VERSION}/unifi_sysvinit_all.deb; \
       echo "${UNIFI_SHA256}  unifi_sysvinit_all.deb" | sha256sum --check; \
       apt-get update -y; \
       apt-get install -y --no-install-recommends \
@@ -95,7 +104,7 @@ RUN set -eux; \
         procps \
       ; \
       apt-get clean; \
-      rm -f /var/lib/apt/lists/*_*; \
+      rm -rf /var/lib/apt/lists/*; \
       rm -rf /tmp/build
 
 COPY script.sed /tmp/script.sed
