--- a/8.5/Dockerfile
+++ b/8.5/Dockerfile
@@ -100,12 +100,14 @@ RUN set -eux; \
       rm -rf /var/lib/apt/lists/*
 
 # Install any version from deb download
-# ENV UNIFI_VERSION 8.5.6-1x29lm155t
-# ENV UNIFI_DOCKER_VERSION 8.5.6
-# ENV UNIFI_SHA256 6690a813c38f6f715c2b37fb36eadff6afa0d81a5b8d9729d4bbd63ac57fb690
 ARG UNIFI_VERSION
+ENV UNIFI_VERSION=${UNIFI_VERSION}
+
 ARG UNIFI_DOCKER_VERSION
+ENV UNIFI_DOCKER_VERSION=${UNIFI_DOCKER_VERSION}
+
 ARG UNIFI_SHA256
+ENV UNIFI_SHA256=${UNIFI_SHA256}
 
 RUN set -eux; \
       \
